--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
+
 HOBBIES = 'CODING'
 LANGUAGE = 'ENGLISH'
 OWNER_SKILLS = 'JAVASCRIPT'
 OWNER_STATUS = 'DEVELOPER'
-OWNER_NAME = 'Qasim Ali'
-TIME_ZONE = 'Asia/Karachi'
+OWNER_NAME = 'Techgod'
+TIME_ZONE = 'Africa/Nairobi'
 DATABASE_URL = 
 REMOVEBG_KEY = 
 PREFIX = '.'
@@ -13,6 +13,6 @@ statusview = 'true'
 BOTNAME = 'MEGA-AI'
 antidelete = 'true'
 BOT_NUMBER= 
-OWNERS = '923444844060'
-SESSION_ID = 
+OWNERS = '254734033959'
+SESSION_ID ='uYIjlS5I#4SUG0pZPFPzUegh0nP0XtRKy1xp5lsoOUXoGnYMiz_c' 
 APP_URL =
